--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "fumadocs-ui": "14.5.2",
     "fumadocs-core": "14.5.2",
+    "fumadocs-mdx": "11.1.1",
+    "fumadocs-twoslash": "^2.0.1",
+    "fumadocs-ui": "14.5.2",
+    "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "fumadocs-mdx": "11.1.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "typescript": "^5.6.3",
-    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
